--- a/dev/sass/partials/layout/_footer.scss
+++ b/dev/sass/partials/layout/_footer.scss
@@ -1,23 +1,28 @@
-.principal-social-media {
+ .principal-social-media {
     width:50%;
     display: -webkit-flex;
     display: -ms-flexbox;
-    display: flex;
     position: absolute;
     top: 90%;
     margin-left: 50px; 
 
-    svg {
-        padding: 5px;
-        width: 50px;
-        -webkit-transition: all 200ms ease-in;
-        -ms-transition: all 200ms ease-in;
-        -moz-transition: all 200ms ease-in;
-        transition: all 200ms ease-in;
-           
-    } 
-        svg:hover {
-            width: 60px;
-       
+    .icon-linkedin {
+        stroke-width: 17px;
     }
-}
+
+     svg {
+         stroke: $color-white;
+         stroke-width:8px;
+         width:5%;
+         margin:5px;        
+         -webkit-transition: all 200ms ease-in;
+         -ms-transition: all 200ms ease-in;
+         -moz-transition: all 200ms ease-in;
+         transition: all 200ms ease-in;
+           
+         &:hover {
+             width:6%;
+             stroke:$color-hover;
+        } 
+     }
+ }
